# CPU_Usage_Tracker

./: CMakeLists.txt  CPURawStats.h  README.md  analyzer.c  analyzer.h  logger.c  logger.h  main.c  queue.c  queue.h  reader.c  reader.h  watchdog.c  watchdog.h
logs/: log_20230526_195827.txt  log_20230526_203653.txt  log_20230527_144810.txt
tests/: test_main.c  test_queue.c  test_queue.h  test_reader.c  test_reader.h
